# kTile

./: .gitignore  CMakeLists.txt  LICENSE  PACKAGING.md  README.md  build.sh  install-kcm.sh  kTile.kwinscript  metadata.json  uninstall-kcm.sh
.github/: FUNDING.yml
contents/code/: block.qml  edit.qml  main.qml
contents/config/: main.xml
kcm/: CMakeLists.txt  kcm_ktile.json  kcmktile.cpp  kcmktile.h
kcm/ui/: RegionGridEditor.qml  main.qml
kwin-script/: metadata.json
kwin-script/contents/code/: main.js
package/: metadata.json
package/contents/code/: block.qml  edit.qml  main.qml
package/contents/ui/: main.qml
package/contents/ui/components/: Block.qml  Edit.qml
packaging/arch/: PKGBUILD
packaging/fedora/: ktile.spec
scripts/: purge-ktile-shortcuts.sh
session-helper/: CMakeLists.txt  drawregioncontroller.cpp  drawregioncontroller.h  ktile-session-helper.desktop  main.cpp  org.kde.ktile.service.in  qml.qrc  regionpickercontroller.cpp  regionpickercontroller.h
session-helper/qml/: DrawRegionGrid.qml  DrawRegionOverlay.qml  RegionBlock.qml  RegionPicker.qml
